--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,17 +12,14 @@
   preview={brownian-motion.gif}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
+@article{Fan2021Accucopy,
+  abbr={BMCBioinfo},
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  title={Accucopy: Accurate and Fast Inference of Allele-specific Copy Number Alterations from Low-coverage Low-purity Tumor Sequencing Data},
+  author={Fan, X and Luo, G and Huang, YS},
+  journal={BMC Bioinformatics},
+  year={2021},
+  publisher={BMC}
 }
 
 @article{PhysRev.47.777,
