add DOI, URL, HTML, pdf, selected=true to Fan2021Accucopy in papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,8 +18,13 @@
   title={Accucopy: Accurate and Fast Inference of Allele-specific Copy Number Alterations from Low-coverage Low-purity Tumor Sequencing Data},
   author={Fan, X and Luo, G and Huang, YS},
   journal={BMC Bioinformatics},
+  doi={10.1186/s12859-020-03924-5},
+  url={https://doi.org/10.1186/s12859-020-03924-5},
+  html={https://doi.org/10.1186/s12859-020-03924-5},
+  pdf={Fan_2021_Accucopy_published.pdf},
   year={2021},
-  publisher={BMC}
+  publisher={BMC},
+  selected={true}
 }
 
 @article{PhysRev.47.777,
@@ -42,7 +47,7 @@
   altmetric={248277},
   dimensions={true},
   google_scholar_id={qyhmnyLat1gC},
-  selected={true}
+  selected={false}
 }
 
 @article{einstein1905molekularkinetischen,
